syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_relation_resources_user;

message DsRelationResourcesUserBean {

     int32 id= 1;
     int32 user_id= 2;
     optional int32 resources_id= 3;
     optional int32 perm=4 ;
     optional string create_time=5 ;
     optional string  update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationResourcesUserBeanService {
  rpc ListDsRelationResourcesUserBeans(ListDsRelationResourcesUserBeansRequest) returns (ListDsRelationResourcesUserBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationResourcesUserBeans"
    };
  }

  rpc GetDsRelationResourcesUserBean(GetDsRelationResourcesUserBeanRequest) returns (DsRelationResourcesUserBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationResourcesUserBeans/*}"
    };
  }

  rpc CreateDsRelationResourcesUserBean(CreateDsRelationResourcesUserBeanRequest) returns (DsRelationResourcesUserBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationResourcesUserBeans"
      body: "DsRelationResourcesUserBean"
    };
  }

  rpc UpdateDsRelationResourcesUserBean(UpdateDsRelationResourcesUserBeanRequest) returns (DsRelationResourcesUserBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationResourcesUserBean.name=DsRelationResourcesUserBeans/*}"
      body: "DsRelationResourcesUserBean"
    };
  }

  rpc DeleteDsRelationResourcesUserBean(DeleteDsRelationResourcesUserBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationResourcesUserBeans/*}"
    };
  }
}

// message DsRelationResourcesUserBean {
// ! This should be defined elsewhere
// }

message ListDsRelationResourcesUserBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationResourcesUserBeansResponse {
  // The field name should match the noun "DsRelationResourcesUserBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationResourcesUserBean DsRelationResourcesUserBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationResourcesUserBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationResourcesUserBeanRequest {
  // The parent resource name where the DsRelationResourcesUserBean is to be created.
  string parent = 1;

  // The DsRelationResourcesUserBean id to use for this DsRelationResourcesUserBean.
  string DsRelationResourcesUserBean_id = 2;

  // The DsRelationResourcesUserBean resource to create.
  // The field name should match the Noun in the method name.
  DsRelationResourcesUserBean DsRelationResourcesUserBean = 3;
}

message UpdateDsRelationResourcesUserBeanRequest {
  // The DsRelationResourcesUserBean resource which replaces the resource on the server.
  DsRelationResourcesUserBean DsRelationResourcesUserBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationResourcesUserBeanRequest {
  // The resource name of the DsRelationResourcesUserBean to be deleted.
  string name = 1;
}
